<resources>
    <string name="app_name">CuidaMedPill</string>

    <string name="content_desc_logo">Logo de CuidaMedPill</string>

    <!-- BASICOS -->
    <string name="basic_hint_add">Añadir</string>
    <string name="basic_hint_editar">Editar</string>
    <string name="basic_button_cancelar">Cancelar</string>
    <string name="basic_hint_guardar">Guardar</string>
    <string name="basic_hint_no">No</string>
    <string name="basic_hint_si">Sí</string>


    <!-- WelcomeActivity (inicio de sesión o registro) y RegistroActivity -->
    <string name="hint_nombreusr">Nombre de usuario</string>
    <string name="hint_passwd">Contraseña</string>
    <string name="hint_fotousr">Foto de perfil</string>
    <string name="hint_alias">Alias (cómo se dirigirá la aplicación a ti)</string>
    <string name="hint_confirmpasswd">Confirmar contraseña: vuelve a poner la misma contraseña</string>
    <string name="hint_usrtutor">Nombre del usuario tutor que te ayudará con la medicación</string>
    <string name="hint_passwdtutor">Contraseña del tutor que te ayudará con la medicación</string>

    <string name="button_iniciarsesion">Iniciar Sesión</string>
    <string name="button_registro">Registrarse</string>
    <string name="button_tipoUsr">Tipo de Usuario</string>

    <string name="text_hint_registro">¿Es la primera vez que entras en CuidaMedPill? Regístrate!</string>
    <string name="text_tipousr_sel">Seleccionado: %1$s</string>
    <string name="text_selecciona_tipousr">Selecciona un tipo de usuario</string>

    <string name="text_error_fotousr">Error al subir la foto</string>
    <string name="text_error_selecciona_tipousr">Por favor selecciona un tipo de usuario</string>


    <!-- PERFIL -->
    <string name="hint_asist_asig">Personas que asistes</string>
    <string name="hint_asist_add">+ Vincular</string>
    <string name="hint_asist_foto">Foto del asistido</string>
    <string name="hint_asist_alias">Alias del asistido</string>
    <string name="hint_supervisar">Supervisar</string>

    <string name="button_cerrarsesion">Cerrar sesión</string>
    <string name="button_eliminar_cuenta">Eliminar cuenta</string>
    <string name="button_perf_editar">Editar perfil</string>
    <string name="button_perf_desvincular">Desvincular</string>
    <string name="button_asist_registro">Registrar</string>
    <string name="button_asist_add">Vincular</string>

    <string name="text_title_notisgen">Notificaciones generales</string>
    <string name="text_title_opciones">Opciones</string>
    <string name="text_title_edit">Editar perfil</string>
    <string name="text_hint_add_asist">Vincula un usuario asistido existente. Si el asistido no tiene cuenta, puedes registrarlo</string>
    <string name="text_title_no_asist">No tienes ningún usuario asistido vinculado</string>

    <!-- MEDICAMENTOS -->
    <string name="text_title_meds">Tus medicamentos</string>
    <string name="text_title_edit_med">Editar medicamento</string>
    <string name="text_title_add_med">Añadir medicamento</string>
    <string name="text_title_med_detalles">Detalles del medicamento</string>

    <string name="text_hint_med_opcionales">No es necesario añadir ninguno estos elementos para guardar el medicamento</string>
    <string name="text_hint_med_horario">Ejemplo: todos los días a las 10 y a las 21 \n Cada 1 día \n Añadir horas: 10 y 21</string>
    <string name="text_hint_cada_intervalo">Cada</string>
    <string name="text_hint_med_horario2"> Todos los días puede indicarse como cada 1 día</string>


    <string name="contdesc_med_simb">Símbolo medicamento</string>

    <string name="hint_med_nombremed">Nombre medicamento</string>
    <string name="hint_med_add_toma">Siguiente toma</string>
    <string name="hint_med_horariotoggle">Horario </string>
    <string name="hint_med_intervalo">Intervalo</string>
    <string name="hint_med_frecuencia"> </string>
    <string name="hint_med_notasMed">Notas adicionales</string>
    <string name="hint_med_fecha_fintratamiento">Fecha fin del tratamiento</string>
    <string name="hint_med_fecha_caducidad">Fecha de caducidad</string>
    <string name="hint_med_restantes">Medicamentos restantes en posesión</string>

    <string name="btn_med_addhora">Añadir hora</string>

    <!-- MEDICAMENTO DETALLE -->
    <string name="hint_med_det_sigIngesta">Siguiente toma</string>
    <string name="hint_med_det_horasProgramadas">Horas programadas</string>
    <string name="hint_med_det_NotisMed">Notificaciones de este medicamento</string>
    <string name="button_eliminar">Eliminar</string>

    <!-- HOME-->
    <string name="text_title_home">Inicio</string>
    <string name="text_title_home_avisos">Avisos</string>
    <string name="text_title_home_avisos_asist"> Dale a resolver el aviso si cambiaste la situación</string>
    <string name="text_title_home_meds">Medicamentos a tomar hoy</string>
    <string name="text_hint_home_meds_asist"> Si ya te has tomado una medicina, pulsa su botón para registrarlo</string>
    <string name="button_home_add_ingesta_noprogram">No programado</string>
    <string name="text_title_nombre">Nombre</string>
    <string name="hint_home_add_nota">Añadir nota opcional</string>

    <string name="text_hint_home_noprogram_asist">¿Te has tomado un medicamento que no aparece en la lista?
        Registralo en "No programado"</string>

    <string name="text_hint_meds_asist">Para ver detalles de un medicamento, pulsa sobre él</string>
    <string name="text_hint_cal_asist"> Pulsa en un día con un punto verde para ver registros de medicamentos de ese día</string>
    <string name="text_title_no_meds_pendientes">No hay medicamentos pendientes para hoy</string>

    <string name="ya_tomado">YA TOMADO</string>


    <!-- Calendario -->
    <string name="text_title_cal">Tu calendario</string>
    <string name="text_title_cal_no_events">No hay nada registrado para este día</string>

    <!-- Notificaciones, alarmas -->
    <string name="text_title_notis">Notificaciones</string>
    <string name="text_title_notis_config_gen">Usar configuración general</string>
    <string name="text_title_notis_usa_config_gen">Este medicamento usará la configuración de notificaciones definida en el perfil</string>
    <string name="text_hint_notis_antiproc">Permite activar una cuenta atrás cuando suene la alarma</string>
    <string name="text_title_formato">Formato</string>
    <string name="text_hint_notis_formato">Formato de la notificación cuando sea la hora de tomarse el medicamento</string>
    <string name="text_title_antiproc">Antiprocrastinador</string>

    <string name="tomado">Tomado</string>
    <string name="voy_tomarlo">Voy a tomarlo ahora</string>
    <string name="ignorar">Ignorar</string>
    <string name="resolver">Resolver</string>
    <string name="ya_tomado_formal">Ya me lo he tomado</string>
    <string name="icono_med">Icono medicamento</string>

    <string name="text_title_conf_perfil">Este medicamento utiliza la configuración general definida en el perfil.</string>

    <string name="text_hint_aviso_titulo">Título del aviso</string>

    <!-- Avisos-->
    <string name="text_title_sinfechasel">Sin fecha seleccionada</string>
    <string name="text_title_selfecha">Elegir fecha</string>
    <string name="text_title_quitarfecha">Quitar fecha</string>
    <string name="text_title_pocasunidades">Indica cuántas medicinas has comprado</string>
    <string name="text_title_cantidadcomprada">Cantidad comprada</string>
    <string name="text_title_tratamiento_terminado"> El tratamiento va a terminar\nElige una nueva fecha de fin, o quítala para no tenerla en cuenta.</string>
    <string name="text_title_fecha_caducidad">El medicamento va a caducar\nElige una nueva fecha de caducidad, o quítala para no tenerla en cuenta </string>
    <string name="text_title_no_pendientes">No hay avisos pendientes</string>

    <string name="text_title_aviso_cad">Aviso de caducidad</string>
    <string name="text_title_aviso_compra">Aviso de compra</string>
    <string name="text_title_aviso_fintratamiento">Aviso fin tratamiento</string>
    <string name="text_title_aviso_tutores_olvido">Aviso a tutores por olvido</string>

    <!-- OTROS -->
    <string name="material_timepicker_hour">Hora</string>
    <string name="material_timepicker_minute">Minuto</string>
    <string name="este_medicamento_no_tiene_horario">Este medicamento no tiene horario</string>
    <string name="fecha_fin_de_tratamiento">Fecha fin de tratamiento:</string>


</resources>

