<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressHome"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/formLayoutHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_general">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBarHome"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/md_surface"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/padding_general_light">

                    <ImageView
                        android:id="@+id/logoToolbar"
                        android:layout_width="@dimen/size_image_tiny_width"
                        android:layout_height="@dimen/size_image_tiny_height"
                        android:contentDescription="@string/content_desc_logo"
                        android:src="@drawable/logo" />

                    <TextView
                        android:id="@+id/tvTituloHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_start"
                        android:ellipsize="end"
                        android:text="@string/text_title_home"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/md_primary_dark"
                        android:textStyle="bold" />

                </LinearLayout>

            </com.google.android.material.appbar.MaterialToolbar>

            <TextView
                android:id="@+id/tvTituloAvisosHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_title_home_avisos"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="?attr/titleColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHintAvisosAsist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_element"
                android:text="@string/text_title_home_avisos_asist"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="?attr/titleColor" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAvisosHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_element"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tvEmptyAvisos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_title_no_pendientes"
                android:textAlignment="center"
                android:visibility="gone"
                android:padding="@dimen/padding_general_light"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="?attr/titleColor"/>

            <TextView
                android:id="@+id/tvMedsHoyHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_title_home_meds"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="?attr/titleColor"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHintMedsHomeAsist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_element"
                android:text="@string/text_hint_home_meds_asist"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="?attr/titleColor" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMedicamentosHoy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_element"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tvEmptyMedsHoy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_title_no_meds_pendientes"
                android:textAlignment="center"
                android:visibility="gone"
                android:padding="@dimen/padding_general_light"
                android:textColor="?attr/titleColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/tvHintNoProgramAsist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/text_hint_home_noprogram_asist"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="?attr/titleColor" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddIngesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margin_end_element"
        android:layout_marginBottom="@dimen/margin_end"
        android:text="@string/button_home_add_ingesta_noprogram"
        android:textAllCaps="true"
        android:textColor="@color/md_background"
        app:backgroundTint="@color/md_primary"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/md_background" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>