<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/formLayout"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_general"
        android:paddingEnd="@dimen/padding_general"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Foto del usuario -->
        <ImageView
            android:id="@+id/imgUserPhoto"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_width="@dimen/size_image_width"
            android:layout_height="@dimen/size_image_height"
            android:layout_marginTop="@dimen/margin_top_logo"
            android:contentDescription="@string/hint_fotousr"
            android:clickable="true"
            android:focusable="true"/>
        <TextView
            android:id="@+id/tvFotoError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_hint_size"
            android:visibility="gone"
            android:text="@string/text_error_fotousr"
            android:layout_gravity="center"
            android:paddingTop="@dimen/margin_error"/>

        <!-- Alias -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutAlias"
            android:hint="@string/hint_alias"
            android:layout_marginTop="@dimen/section_separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAlias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Nombre de usuario -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUsername"
            android:hint="@string/hint_nombreusr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_elements_layout"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            android:hint="@string/hint_passwd"
            android:layout_marginTop="@dimen/margin_elements_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirmar contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutConfirmPassword"
            android:hint="@string/hint_confirmpasswd"
            android:layout_marginTop="@dimen/margin_elements_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_elements_layout"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Botón tipo de usuario -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTipoUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_tipoUsr"
                android:icon="@drawable/ic_arrow_drop_down"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <TextView
                android:id="@+id/tvTipoUsuarioSeleccionado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements_layout"
                android:textColor="@color/md_on_background"
                android:text="@string/text_selecciona_tipousr"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvTTipoUsrError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_elements_layout"
            android:textColor="@color/md_error"
            android:visibility="gone"
            android:text="@string/text_selecciona_tipousr"
            android:textStyle="bold"/>

        <!-- Usuario tutor -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTutorUsername"
            android:hint="@string/hint_usrtutor"
            android:layout_marginTop="@dimen/margin_elements_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTutorUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Contraseña tutor -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTutorPassword"
            android:hint="@string/hint_passwdtutor"
            android:layout_marginTop="@dimen/margin_elements_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTutorPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón registrar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:text="@string/button_registro"
            android:layout_marginTop="@dimen/margin_elements_buttons"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"/>

        <!-- Progress indicator -->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressIndicator"
            android:visibility="gone"
            android:layout_marginTop="@dimen/padding_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorSize="@dimen/progress_indicator_size"
            app:trackColor="?attr/colorOnSurfaceVariant"
            app:indicatorColor="?attr/colorPrimary"/>

    </LinearLayout>
</ScrollView>
