<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/formLayout"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_general"
        android:paddingEnd="@dimen/padding_general"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Logo opcional -->
        <ImageView
            android:id="@+id/imgLogo"
            android:src="@drawable/logo"
            android:layout_width="@dimen/size_image_width"
            android:layout_height="@dimen/size_image_height"
            android:layout_marginTop="@dimen/margin_top_logo"
            android:contentDescription="@string/content_desc_logo"/>

        <!-- Nombre de usuario -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUsername"
            android:hint="@string/hint_nombreusr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/section_separator"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUsername"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            android:hint="@string/hint_passwd"
            android:layout_marginTop="@dimen/margin_elements_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón iniciar sesión -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:text="@string/button_iniciarsesion"
            android:layout_marginTop="@dimen/margin_elements_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"/>

        <!-- Separador para que el botón de registrarse salga abajo-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Texto aclaración y registrarse -->
        <TextView
            android:id="@+id/tvRegisterPrompt"
            android:text="@string/text_hint_registro"
            android:layout_marginTop="@dimen/margin_elements_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_on_background"
            android:textSize="@dimen/text_hint_size"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:text="@string/button_registro"
            android:layout_marginTop="@dimen/margin_elements_layout"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button"/>

        <!-- Progress indicator -->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressIndicator"
            android:visibility="gone"
            android:layout_marginTop="@dimen/padding_general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorSize="@dimen/progress_indicator_size"
            app:trackColor="?attr/colorOnSurfaceVariant"
            app:indicatorColor="?attr/colorPrimary"/>

    </LinearLayout>
</ScrollView>
